Prevent nested flex overflow issues

--- a/transports.css
+++ b/transports.css
@@ -4,7 +4,20 @@
     margin: 10px 25%;
     padding: 10px;
     border-radius: 5px;
-    min-width: 700px;
+    min-width: 500px;
+}
+.chart-ges {
+    background: rgb(255, 255, 255);
+    border: 2px solid black;
+    margin: 10px 25%;
+    padding: 10px;
+    border-radius: 5px;
+    min-width: 500;
+}
+.chart-ges h2 {
+    text-align: center;
+    padding: 0px;
+    margin: 10px 0px;
 }
 .transport-container-form h2 {
     text-align: center;
@@ -17,14 +30,16 @@
 .transport-form-row {
     display: flex;
     margin-top: 10px;
+    min-width: 0;
 }
 .transport-form-row-mode {
     margin-right: 15px;
 }
 .transport-form-row-inputs {
-    flex: 1 1 10px;
+    flex: 1 1 0px;
     display: flex;
     flex-direction: column;
+    min-width: 0;
 }
 .transport-form-row-inputs input[type="number"]{
     max-width: 30px;
@@ -32,9 +47,11 @@
 .transport-form-row-inputs-row1{
     display: flex;
     flex: 1 1 auto;
+    min-width: 0;
 }
 .transport-form-row-inputs-row1 input{
     margin-right: 15px;
+    min-width: 0;
 }
 .transport-form-row-inputs-row1 input[type="text"]{
     flex: 1;
